force-app/main/default/objects/Account/fields/dx_bimkatsuyou__c.field-meta.xml
<CustomField>
    <fullName>dx_bimkatsuyou__c</fullName>
    <label>BIM活用</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>