force-app/main/default/objects/Account/fields/dx_bimUsage__c.field-meta.xml
<CustomField>
    <fullName>dx_bimUsage__c</fullName>
    <label>BIMの利用状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>