force-app/main/default/objects/Account/fields/DX_category__c.field-meta.xml
<CustomField>
    <fullName>DX_category__c</fullName>
    <label>攻略種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>共存</fullName>
            </value>
            <value>
                <fullName>本丸</fullName>
            </value>
            <value>
                <fullName>BA-plusナーチャリング対象</fullName>
            </value>
            <value>
                <fullName>調査・ナーチャリング対象</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>