force-app/main/default/objects/Account/fields/DX_competitor__c.field-meta.xml
<CustomField>
    <fullName>DX_competitor__c</fullName>
    <label>競合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>