force-app/main/default/objects/Account/fields/DX_ConSalesPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_ConSalesPolicy__c</fullName>
    <label>工事店向け営業方針</label>
    <length>255</length>
    <type>Text</type>
</CustomField>