force-app/main/default/objects/Account/fields/DX_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>DX_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別管理開始ユーザ_DX</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpaL</relationshipName>
    <type>Lookup</type>
</CustomField>