force-app/main/default/objects/Account/fields/DX_Department__c.field-meta.xml
<CustomField>
    <fullName>DX_Department__c</fullName>
    <label>担当部署_DX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>