force-app/main/default/objects/Account/fields/DX_education__c.field-meta.xml
<CustomField>
    <fullName>DX_education__c</fullName>
    <label>教育・研究・文化施設</label>
    <length>255</length>
    <type>Text</type>
</CustomField>