force-app/main/default/objects/Account/fields/DX_factory__c.field-meta.xml
<CustomField>
    <fullName>DX_factory__c</fullName>
    <label>工場・発電所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>