force-app/main/default/objects/Account/fields/DX_FiscalYearEnd__c.field-meta.xml
<CustomField>
    <fullName>DX_FiscalYearEnd__c</fullName>
    <label>決算期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>