force-app/main/default/objects/Account/fields/dx_gyousyu__c.field-meta.xml
<CustomField>
    <fullName>dx_gyousyu__c</fullName>
    <label>業種</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>設計事務所</fullName>
            </value>
            <value>
                <fullName>施主</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>