force-app/main/default/objects/Account/fields/DX_hotel__c.field-meta.xml
<CustomField>
    <fullName>DX_hotel__c</fullName>
    <label>宿泊施設</label>
    <length>255</length>
    <type>Text</type>
</CustomField>