force-app/main/default/objects/Account/fields/DX_housing__c.field-meta.xml
<CustomField>
    <fullName>DX_housing__c</fullName>
    <label>住宅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>