force-app/main/default/objects/Account/fields/dx_kokyakusyubetsu__c.field-meta.xml
<CustomField>
    <fullName>dx_kokyakusyubetsu__c</fullName>
    <label>顧客種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>設計事務所</fullName>
            </value>
            <value>
                <fullName>デベロッパー</fullName>
            </value>
            <value>
                <fullName>工事店</fullName>
            </value>
            <value>
                <fullName>メーカー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>