force-app/main/default/objects/Account/fields/dx_kouryakutaisyou__c.field-meta.xml
<CustomField>
    <fullName>dx_kouryakutaisyou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>攻略対象</label>
    <type>Checkbox</type>
</CustomField>