force-app/main/default/objects/Account/fields/DX_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>DX_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終更新者 ID_DX</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpor</relationshipName>
    <type>Lookup</type>
</CustomField>