force-app/main/default/objects/Account/fields/DX_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DX_LastModifiedDate__c</fullName>
    <label>最終更新日_DX</label>
    <type>DateTime</type>
</CustomField>