force-app/main/default/objects/Account/fields/DX_LOD350__c.field-meta.xml
<CustomField>
    <fullName>DX_LOD350__c</fullName>
    <label>LOD350対応</label>
    <length>100</length>
    <type>Text</type>
</CustomField>