force-app/main/default/objects/Account/fields/DX_ManaSalesPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_ManaSalesPolicy__c</fullName>
    <label>経営層向け営業方針</label>
    <length>255</length>
    <type>Text</type>
</CustomField>