force-app/main/default/objects/Account/fields/DX_MediumLarge__c.field-meta.xml
<CustomField>
    <fullName>DX_MediumLarge__c</fullName>
    <label>中・大規模木造</label>
    <length>255</length>
    <type>Text</type>
</CustomField>