force-app/main/default/objects/Account/fields/DX_MyDepartmentFlg__c.field-meta.xml
<CustomField>
    <fullName>DX_MyDepartmentFlg__c</fullName>
    <formula>IF( $User.Department=  DX_Department__c  ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の部署Flg_DX</label>
    <type>Checkbox</type>
</CustomField>