force-app/main/default/objects/Account/fields/DX_office__c.field-meta.xml
<CustomField>
    <fullName>DX_office__c</fullName>
    <label>事務所・庁舎</label>
    <length>255</length>
    <type>Text</type>
</CustomField>