force-app/main/default/objects/Account/fields/DX_OnSiteSalesPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_OnSiteSalesPolicy__c</fullName>
    <label>現場向け営業方針</label>
    <length>255</length>
    <type>Text</type>
</CustomField>