force-app/main/default/objects/Account/fields/DX_OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>DX_OrderAmount__c</fullName>
    <label>受注高</label>
    <length>255</length>
    <type>Text</type>
</CustomField>