force-app/main/default/objects/Account/fields/DX_Other__c.field-meta.xml
<CustomField>
    <fullName>DX_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>帳票_その他集計_EN</label>
    <type>Checkbox</type>
</CustomField>