force-app/main/default/objects/Account/fields/DX_others__c.field-meta.xml
<CustomField>
    <fullName>DX_others__c</fullName>
    <label>その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>