force-app/main/default/objects/Account/fields/DX_Participating__c.field-meta.xml
<CustomField>
    <fullName>DX_Participating__c</fullName>
    <label>参画団体</label>
    <length>255</length>
    <type>Text</type>
</CustomField>