force-app/main/default/objects/Account/fields/DX_phase00ALL__c.field-meta.xml
<CustomField>
    <fullName>DX_phase00ALL__c</fullName>
    <label>未接触日_共通</label>
    <type>Date</type>
</CustomField>