force-app/main/default/objects/Account/fields/DX_phase01Acc__c.field-meta.xml
<CustomField>
    <fullName>DX_phase01Acc__c</fullName>
    <label>1回目訪問日</label>
    <type>Date</type>
</CustomField>