force-app/main/default/objects/Account/fields/DX_phase02Acc__c.field-meta.xml
<CustomField>
    <fullName>DX_phase02Acc__c</fullName>
    <label>モビライザー到達日</label>
    <type>Date</type>
</CustomField>