force-app/main/default/objects/Account/fields/DX_phase03ALL_old__c.field-meta.xml
<CustomField>
    <fullName>DX_phase03ALL_old__c</fullName>
    <label>2回目のアポイント承諾日_共通</label>
    <type>Date</type>
</CustomField>