force-app/main/default/objects/Account/fields/DX_Phase04Acc__c.field-meta.xml
<CustomField>
    <fullName>DX_Phase04Acc__c</fullName>
    <label>物件探索開始日</label>
    <type>Date</type>
</CustomField>