force-app/main/default/objects/Account/fields/DX_phase06ALL__c.field-meta.xml
<CustomField>
    <fullName>DX_phase06ALL__c</fullName>
    <label>トライアル採用支援日_共通</label>
    <type>Date</type>
</CustomField>