force-app/main/default/objects/Account/fields/DX_phase07ALL__c.field-meta.xml
<CustomField>
    <fullName>DX_phase07ALL__c</fullName>
    <label>中止日_共通</label>
    <type>Date</type>
</CustomField>