force-app/main/default/objects/Account/fields/DX_Priority__c.field-meta.xml
<CustomField>
    <fullName>DX_Priority__c</fullName>
    <label>優先度_DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>