force-app/main/default/objects/Account/fields/DX_ProSalesPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_ProSalesPolicy__c</fullName>
    <label>DX/調達向け営業方針</label>
    <length>255</length>
    <type>Text</type>
</CustomField>