force-app/main/default/objects/Account/fields/DX_SalesCivilEngineering__c.field-meta.xml
<CustomField>
    <fullName>DX_SalesCivilEngineering__c</fullName>
    <label>土木事業売上</label>
    <length>225</length>
    <type>Text</type>
</CustomField>