force-app/main/default/objects/Account/fields/DX_SalesConstruction__c.field-meta.xml
<CustomField>
    <fullName>DX_SalesConstruction__c</fullName>
    <label>建築事業売上</label>
    <length>255</length>
    <type>Text</type>
</CustomField>