force-app/main/default/objects/Account/fields/dx_sekisansoft__c.field-meta.xml
<CustomField>
    <fullName>dx_sekisansoft__c</fullName>
    <label>積算ソフト</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALS</fullName>
            </value>
            <value>
                <fullName>ヘリオス</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>