force-app/main/default/objects/Account/fields/dx_sekkeicad__c.field-meta.xml
<CustomField>
    <fullName>dx_sekkeicad__c</fullName>
    <label>設計CAD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revit</fullName>
            </value>
            <value>
                <fullName>ArchiCAD</fullName>
            </value>
            <value>
                <fullName>GLOOBE</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>