force-app/main/default/objects/Account/fields/dx_setsuritsunen__c.field-meta.xml
<CustomField>
    <fullName>dx_setsuritsunen__c</fullName>
    <label>設立年</label>
    <length>200</length>
    <type>Text</type>
</CustomField>