force-app/main/default/objects/Account/fields/dx_shihonkin__c.field-meta.xml
<CustomField>
    <fullName>dx_shihonkin__c</fullName>
    <label>資本金</label>
    <length>100</length>
    <type>Text</type>
</CustomField>