force-app/main/default/objects/Account/fields/DX_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未接触</fullName>
                <default>true</default>
                <label>未接触</label>
            </value>
            <value>
                <fullName>1回目のアポ</fullName>
            </value>
            <value>
                <fullName>BuildAppのデモ、特徴の紹介（2回目以降のアポ）</fullName>
            </value>
            <value>
                <fullName>採用検討</fullName>
            </value>
            <value>
                <fullName>BuildAppの採用（支援）</fullName>
            </value>
            <value>
                <fullName>BuildAppの採用（確認）</fullName>
            </value>
            <value>
                <fullName>自社と‎BuildAppの成功確認</fullName>
            </value>
            <value>
                <fullName>次物件への着手（支援）</fullName>
            </value>
            <value>
                <fullName>次の物件の採用（確認）</fullName>
            </value>
            <value>
                <fullName>12物件／年の受注（毎月受注がある）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>