force-app/main/default/objects/Account/fields/DX_store__c.field-meta.xml
<CustomField>
    <fullName>DX_store__c</fullName>
    <label>店舗</label>
    <length>255</length>
    <type>Text</type>
</CustomField>