force-app/main/default/objects/Account/fields/DX_TacTarget__c.field-meta.xml
<CustomField>
    <fullName>DX_TacTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp戦略ターゲット</label>
    <type>Checkbox</type>
</CustomField>