force-app/main/default/objects/Account/fields/DX_tantouryouiki__c.field-meta.xml
<CustomField>
    <fullName>DX_tantouryouiki__c</fullName>
    <label>担当領域</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>マーケPJ</fullName>
            </value>
            <value>
                <fullName>DX推進一部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>