force-app/main/default/objects/Account/fields/dx_template__c.field-meta.xml
<CustomField>
    <fullName>dx_template__c</fullName>
    <label>テンプレート</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社製作</fullName>
            </value>
            <value>
                <fullName>BooT.One</fullName>
            </value>
            <value>
                <fullName>T-REX</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>