force-app/main/default/objects/Account/fields/dx_url__c.field-meta.xml
<CustomField>
    <fullName>dx_url__c</fullName>
    <label>DX_URL</label>
    <type>Url</type>
</CustomField>