force-app/main/default/objects/Account/fields/en_acc_mitsumorikingaku_202007__c.field-meta.xml
<CustomField>
    <fullName>en_acc_mitsumorikingaku_202007__c</fullName>
    <label>見積金額_2020年7月</label>
    <summarizedField>Opportunity.en_mitsumorikingaku__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.en_opp_nengetsu_mitsumoribi__c</field>
        <operation>equals</operation>
        <value>2020年7月</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>