force-app/main/default/objects/Account/fields/EN_AccountOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>EN_AccountOwnerRole__c</fullName>
    <formula>EN_OwnerId__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者ロール_EN</label>
    <type>Text</type>
</CustomField>