force-app/main/default/objects/Account/fields/en_almi1__c.field-meta.xml
<CustomField>
    <fullName>en_almi1__c</fullName>
    <label>アルミサッシ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>