force-app/main/default/objects/Account/fields/en_dekki__c.field-meta.xml
<CustomField>
    <fullName>en_dekki__c</fullName>
    <label>デッキ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>