force-app/main/default/objects/Account/fields/EN_Department__c.field-meta.xml
<CustomField>
    <fullName>EN_Department__c</fullName>
    <label>担当部署_EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>