force-app/main/default/objects/Account/fields/en_gaibuen1__c.field-meta.xml
<CustomField>
    <fullName>en_gaibuen1__c</fullName>
    <externalId>true</externalId>
    <label>外部ID（EN）</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>