force-app/main/default/objects/Account/fields/EN_grossProfitPropertyCompThisTerm__c.field-meta.xml
<CustomField>
    <fullName>EN_grossProfitPropertyCompThisTerm__c</fullName>
    <label>今期完成物件_売上粗利金額</label>
    <summarizedField>Opportunity.en_uriageararigaku__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.isSalesInCurrentPeriodForTotal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>