force-app/main/default/objects/Account/fields/EN_grossProfitPropertyUnfinished__c.field-meta.xml
<CustomField>
    <fullName>EN_grossProfitPropertyUnfinished__c</fullName>
    <label>未完成物件_受注粗利金額</label>
    <summarizedField>Opportunity.en_zyutyuuararigoukei__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.en_genbastatus__c</field>
        <operation>notEqual</operation>
        <value>完成</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.en_zyutyuukakudo__c</field>
        <operation>equals</operation>
        <value>受注確定</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>