force-app/main/default/objects/Account/fields/en_hosokuj__c.field-meta.xml
<CustomField>
    <fullName>en_hosokuj__c</fullName>
    <label>補足事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>