force-app/main/default/objects/Account/fields/EN_konkizyutyuukingaku__c.field-meta.xml
<CustomField>
    <fullName>EN_konkizyutyuukingaku__c</fullName>
    <label>今期受注金額</label>
    <summarizedField>Opportunity.en_zyutyukingaku__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.en_zyutyuubi__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2023</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.en_zyutyuubi__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>