force-app/main/default/objects/Account/fields/en_kouryakuh__c.field-meta.xml
<CustomField>
    <fullName>en_kouryakuh__c</fullName>
    <label>顧客攻略方針</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>