force-app/main/default/objects/Account/fields/en_kouryakutaisyou__c.field-meta.xml
<CustomField>
    <fullName>en_kouryakutaisyou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジ攻略対象</label>
    <type>Checkbox</type>
</CustomField>