force-app/main/default/objects/Account/fields/en_kouyamasankennin__c.field-meta.xml
<CustomField>
    <fullName>en_kouyamasankennin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>香山さん所有</label>
    <type>Checkbox</type>
</CustomField>