force-app/main/default/objects/Account/fields/EN_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>EN_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終更新者 ID_EN</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpvJ</relationshipName>
    <type>Lookup</type>
</CustomField>