force-app/main/default/objects/Account/fields/en_luver1__c.field-meta.xml
<CustomField>
    <fullName>en_luver1__c</fullName>
    <label>ルーバー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>