force-app/main/default/objects/Account/fields/EN_ManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>EN_ManagementTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理対象_EN</label>
    <type>Checkbox</type>
</CustomField>