force-app/main/default/objects/Account/fields/en_mokuhyojuchu1__c.field-meta.xml
<CustomField>
    <fullName>en_mokuhyojuchu1__c</fullName>
    <label>目標受注額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>