force-app/main/default/objects/Account/fields/EN_MyChargeFlg__c.field-meta.xml
<CustomField>
    <fullName>EN_MyChargeFlg__c</fullName>
    <formula>IF( $User.Id = EN_OwnerId__r.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の担当先Flg_EN</label>
    <type>Checkbox</type>
</CustomField>