force-app/main/default/objects/Account/fields/EN_orderAmountPropertyCompThisTerm__c.field-meta.xml
<CustomField>
    <fullName>EN_orderAmountPropertyCompThisTerm__c</fullName>
    <label>今期完成物件_売上金額</label>
    <summarizedField>Opportunity.en_uriagekingaku__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.isSalesInCurrentPeriodForTotal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>