force-app/main/default/objects/Account/fields/EN_orderAmountPropertyThisTerm__c.field-meta.xml
<CustomField>
    <fullName>EN_orderAmountPropertyThisTerm__c</fullName>
    <label>今期受注物件_受注金額</label>
    <summarizedField>Opportunity.en_zyutyukingaku__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.isOrderInCurrentPeriodForTotal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>