force-app/main/default/objects/Account/fields/EN_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>EN_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先 所有者_EN</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpQf</relationshipName>
    <type>Lookup</type>
</CustomField>