force-app/main/default/objects/Account/fields/en_sasshi1__c.field-meta.xml
<CustomField>
    <fullName>en_sasshi1__c</fullName>
    <label>サッシ工事_受注額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>