force-app/main/default/objects/Account/fields/En_sassiarari__c.field-meta.xml
<CustomField>
    <fullName>En_sassiarari__c</fullName>
    <label>サッシ工事_粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>