force-app/main/default/objects/Account/fields/en_ssswtb1__c.field-meta.xml
<CustomField>
    <fullName>en_ssswtb1__c</fullName>
    <label>SS・SW・TB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>