force-app/main/default/objects/Account/fields/EN_TargetClearNumber__c.field-meta.xml
<CustomField>
    <fullName>EN_TargetClearNumber__c</fullName>
    <label>攻略人数_EN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>