force-app/main/default/objects/Account/fields/EN_TargetpolicyUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>EN_TargetpolicyUpdateDate__c</fullName>
    <label>顧客攻略方針_更新日</label>
    <type>Date</type>
</CustomField>