force-app/main/default/objects/Account/fields/EN_torihikizyouken__c.field-meta.xml
<CustomField>
    <fullName>EN_torihikizyouken__c</fullName>
    <label>取引条件（支払いサイト等）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>