force-app/main/default/objects/Account/fields/en_uriagemokuhyo__c.field-meta.xml
<CustomField>
    <fullName>en_uriagemokuhyo__c</fullName>
    <label>売上目標額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>