force-app/main/default/objects/Account/fields/EN_wao_accountname__c.field-meta.xml
<CustomField>
    <fullName>EN_wao_accountname__c</fullName>
    <label>エンジ_WAO名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>