force-app/main/default/objects/Account/fields/en_yuka1__c.field-meta.xml
<CustomField>
    <fullName>en_yuka1__c</fullName>
    <label>床工事_受注額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>