force-app/main/default/objects/Account/fields/eSMCode__c.field-meta.xml
<CustomField>
    <fullName>eSMCode__c</fullName>
    <label>eSMカスタムコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>