force-app/main/default/objects/Account/fields/filteredOpportunityCount__c.field-meta.xml
<CustomField>
    <fullName>filteredOpportunityCount__c</fullName>
    <label>対象商談数</label>
    <summaryFilterItems>
        <field>Opportunity.recordTypeId__c</field>
        <operation>equals</operation>
        <value>0125h000000Y9ROAA0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>