force-app/main/default/objects/Account/fields/GC__c.field-meta.xml
<CustomField>
    <fullName>GC__c</fullName>
    <label>GC種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大手・準大手</fullName>
            </value>
            <value>
                <fullName>地方</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>