force-app/main/default/objects/Account/fields/Head_Branch__c.field-meta.xml
<CustomField>
    <fullName>Head_Branch__c</fullName>
    <label>本社/支店</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本社</fullName>
            </value>
            <value>
                <fullName>支店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>