force-app/main/default/objects/Account/fields/HearingDoneDay__c.field-meta.xml
<CustomField>
    <fullName>HearingDoneDay__c</fullName>
    <label>ヒアリング完了日</label>
    <type>Date</type>
</CustomField>