force-app/main/default/objects/Account/fields/Hi_RC__c.field-meta.xml
<CustomField>
    <fullName>Hi_RC__c</fullName>
    <label>Hi-RC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>